Fix Member Team Bubble Overflow on more than 1 role

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -74,7 +74,8 @@
 
 .teamBubble {
   position: absolute;
-  top: 20px;
+  height: 1200px;
+  top: -50px;
   z-index: -4;
 }
 
